# personal_finance_tracker

./: .gitignore  README.md  data_entry.py  finance_data.csv  main.py  pyproject.toml
